# The-WildStar-Project

./: .cache_ggshield  .gitignore  README.md  gulpfile.js  package-lock.json  test.db
.macros/: my-paths.pth
IOT Integration Code/: .gitignore
IOT Integration Code/C Plus Plus/Arduino Like Packages/IRcodes Cpp Library/: library.json
IOT Integration Code/C Plus Plus/Dev Env/libraries/: IRcodes Cpp Library
IOT Integration Code/C Plus Plus/ESP32 Specific Libraries/AHI/: AHI.ino  AHI_Secrets.template.h  AHI_helper.cpp  AHI_helper.h  AHI_localConfig.h
IOT Integration Code/CircuitPython/LIbraries/adafruit-circuitpython-bundle-7.x-mpy-20220524/: VERSIONS.txt
IOT Integration Code/CircuitPython/dev env/AH_Integration/: __test__.py
IOT Integration Code/MicroPython/Binary/: Unconfirmed 587199.crdownload
IOT Integration Code/Protocols and Standards/: Voice Dictation Standard.md
IOT Integration Code/Python/: pastedump.json  pastedump.txt
IOT Integration Code/Python/EasyDiscord Python Package/: AIO.py  EasyDiscord.py  requirements.txt
IOT Integration Code/Python/Integration Code Python Package/: setup.cfg
IOT Integration Code/Python/WildStarProject Python Package/: setup.cfg
IOT Integration Code/Web Dev/: package-lock.json
IOT Integration Code/Web Dev/Server API/: _app.py  app.py  package-lock.json
IOT Integration Code/Web Dev/__test__/: package-lock.json  package.json
Top Level Folder/Python/: .mypy.ini
Top Level Folder/Python/WildStarProject Python Package/: LICENSE
Wild Star Project Top Level Folder/: __notimplemented__
(+64 files in other folders)
