[metadata]
name = WildStarProjectPython
description = Contains the Wild Star Project Python code in an pypi installable format :)
author = Smartguy88
author_email = imlying88@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ActuallyHappening/The-WildStar-Project/tree/master/Top%20Level%20Folder/Python/WildStarProject%20Python%20Package
platforms = unix, linux, osx, cygwin, win32
version = 0.0.0

classifiers = 
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.14
  Programming Language :: Python :: 3.13

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
#install_requires = 

[options.packages.find]
where = src
exclude = 
  WSP_Test*